# lenta-mvp

./: .dockerignore  .env.example  .gitignore  .mcp.json  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
docs/: INTEGRATION.md  Lenta-Presentation.pptx  QUICKSTART.md  SCALING.md
services/api/: Dockerfile  pyproject.toml
services/api/src/api/: __init__.py  ab.py  deps.py  main.py  state.py
services/api/src/api/routers/: control.py  dashboard.py  events.py  feed.py  health.py  metrics.py  models.py  pipeline.py
services/api/tests/: test_control.py  test_events.py  test_feed.py  test_health.py
services/dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
services/dashboard/src/: App.tsx  api.ts  index.css  types.ts  ui.tsx
services/dashboard/src/hooks/: usePolling.ts
services/dashboard/src/onboarding/: Onboarding.tsx
services/dashboard/src/panels/: ABPanel.tsx  Header.tsx  LiveWorkflow.tsx  ModelTimeline.tsx  PipelineStatus.tsx  ScenarioControls.tsx
services/trainer/: Dockerfile  pyproject.toml
services/trainer/src/trainer/: __init__.py  main.py  retrain.py  seed.py  simulator.py
