[project]
name = "lenta-mvp"
version = "0.1.0"
description = "AI-powered personalized video recommendation MVP (Lenta)"
requires-python = ">=3.12"
dependencies = [
    "lenta-core",
    "lenta-api",
    "lenta-trainer",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.6",
]

# Root is a virtual workspace root: not built/installed itself, but its
# dependencies (the three members) are installed into a single dev venv so
# `uv sync` gives you everything for local development.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "services/api", "services/trainer"]

[tool.uv.sources]
lenta-core = { workspace = true }
lenta-api = { workspace = true }
lenta-trainer = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "services/api/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
