[project]
name = "lenta-api"
version = "0.1.0"
description = "FastAPI serving + ingestion + metrics + control plane"
requires-python = ">=3.12"
dependencies = [
    "lenta-core",
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "httpx>=0.27,<0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
lenta-core = { workspace = true }
